# V80-Exploer

./: .gitignore
hls/: Makefile  Reference_test.cpp  build.tcl  m_axi.cpp  read42.cpp  read_kernel.cpp  test.cpp
host/: host  host.c
host/app/: Makefile  host  host.c  host.cpp  test  test.c
host/include/: addr_alloc.h  kernel_ctrl.h
host/src/: Kernel_ctrl.c  addr_alloc.c
hw/amd_v80_gen5x8_24.1/: pspmc.hwdef  vivado_pid16847.str
hw/amd_v80_gen5x8_24.1/src/bd/: create_bd_design.tcl
hw/amd_v80_gen5x8_24.1/src/iprepo/Infeas_Res_S2_export_IP/sol1/: sol1.aps  sol1.directive  sol1_data.json
hw/amd_v80_gen5x8_24.1/src/iprepo/Infeas_Res_S2_export_IP/sol1/.autopilot/: .automg_exit  .autopilot_exit
hw/amd_v80_gen5x8_24.1/src/iprepo/pl_kernel/: component.xml
hw/amd_v80_gen5x8_24.1/src/iprepo/pl_kernel/doc/: ReleaseNotes.txt
hw/amd_v80_gen5x8_24.1/src/iprepo/pl_kernel/drivers/pl_kernel_v1_0/src/: CMakeLists.txt  Makefile  xpl_kernel.c  xpl_kernel.h  xpl_kernel_hw.h  xpl_kernel_linux.c  xpl_kernel_sinit.c
hw/amd_v80_gen5x8_24.1/src/iprepo/pl_kernel/hdl/ip/: pl_kernel_dcmp_64ns_64ns_1_1_no_dsp_1_ip.v  pl_kernel_dmul_64ns_64ns_64_1_med_dsp_1_ip.v  pl_kernel_dsub_64ns_64ns_64_3_no_dsp_1_ip.v
hw/amd_v80_gen5x8_24.1/src/iprepo/pl_kernel/hdl/verilog/: pl_kernel.v  pl_kernel_Block_entry_split_proc.v  pl_kernel_axpy.v  pl_kernel_axpy_Pipeline_VITIS_LOOP_25_1.v  pl_kernel_control_s_axi.v  pl_kernel_dcmp_64ns_64ns_1_1_no_dsp_1.v  pl_kernel_dmul_64ns_64ns_64_1_med_dsp_1.v  pl_kernel_entry_proc.v  (+37 more)
hw/amd_v80_gen5x8_24.1/src/iprepo/pl_kernel/xgui/: pl_kernel_v1_0.tcl
(+1767 files in other folders)
